[package]
name = "spyglass"
version = "23.11.1"
edition = "2021"
default-run = "spyglass"

[dependencies]
addr = "0.15.6"
anyhow = { workspace = true }
arc-swap = "1.7.1"
bytes = "1.8.0"
chrono = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
console-subscriber = { version = "0.4", optional = true }
dashmap = "6.1"
diff-struct = "0.5.3"
digest = "0.10"
directories = "5.0.1"
flate2 = "1.0.34"
futures = "0.3"
glob = "0.3.1"
governor = "0.5.1"
hex = "0.4"
http = "1.1"
ignore = "0.4"
jsonrpsee = { workspace = true, features = ["server"] }
lnk = "0.5.1"
log = "0.4"
mime = "0.3.17"
new_mime_guess = "4.0.4"
nonzero_ext = "0.3.0"
notify = { version = "7.0.0", default-features = false, features = ["serde", "macos_fsevent"] }
notify-debouncer-mini = { version = "0.5", default-features = false }
num-format = "0.4"
open = "5.3"
percent-encoding = "2.3"
regex = "1"
reqwest = { workspace = true }
ron = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
strum = { workspace = true }
strum_macros = { workspace = true }
tantivy = "0.19"
tendril = "0.4.3"
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tower = { version = "0.4", features = ["full"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"]}
url = "2.5"
uuid = { workspace =true, features = ["serde", "v4"], default-features = false }
warc = "0.3"
warp = "0.3"

# Spyglass libs
auth_core = { git = "https://github.com/spyglass-search/third-party-apis", rev = "dafb599bb24f505ce96d975e922bfadba6e2d1ff" }
github = { git = "https://github.com/spyglass-search/third-party-apis", rev = "dafb599bb24f505ce96d975e922bfadba6e2d1ff" }
google = { git = "https://github.com/spyglass-search/third-party-apis", rev = "dafb599bb24f505ce96d975e922bfadba6e2d1ff" }
reddit = { git = "https://github.com/spyglass-search/third-party-apis", rev = "dafb599bb24f505ce96d975e922bfadba6e2d1ff" }

entities = { path = "../entities" }
migration = { path = "../migrations" }
shared = { path = "../shared", features = ["metrics"] }
spyglass-netrunner = "0.2.11"
spyglass-llm = { path = "../spyglass-llm" }
spyglass-processor = { path = "../spyglass-processor" }
spyglass-rpc = { path = "../spyglass-rpc" }
spyglass-searcher = { path = "../spyglass-searcher" }
spyglass-model-interface = { path = "../spyglass-model-interface" }
sqlite-vec = "0.1.3"

[dev-dependencies]
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

[features]
tokio-console = ["tokio/tracing", "console-subscriber"]
cuda = ["spyglass-model-interface/cuda"]

[lib]
name = "libspyglass"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "spyglass"
path = "src/main.rs"

[[bin]]
name = "spyglass-debug"
path = "bin/debug/src/main.rs"
