[package]
name = "spyglass-app"
version = "0.1.3"
description = "Personal Search Engine"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
license = ""
repository = ""
default-run = "spyglass-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
anyhow = "1.0"
auto-launch = "0.2.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
log = "0.4"
num-format = "0.4"
open = "2"
reqwest = { version = "0.11", features = ["json"] }
ron = "0.8"
sentry = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
strum = "0.24"
strum_macros = "0.24"
tauri = { version = "1.0.2", features = ["api-all", "devtools", "dialog", "notification", "process-command-api", "system-tray", "updater"] }
tokio = "1"
tokio-retry = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
url = "2.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
