[package]
name = "spyglass-app"
version = "0.1.3"
description = "Personal Search Engine"
authors = ["Andrew Huynh <a5thuynh@gmail.com>"]
license = ""
repository = ""
default-run = "spyglass-app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
anyhow = "1.0"
auto-launch = "0.4.0"
diff-struct = "0.5.1"
jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
log = "0.4"
migration = { path = "../migrations" }
num-format = "0.4"
open = "3"
reqwest = { version = "0.11", features = ["json"] }
ron = "0.8"
sentry = "0.30.0"
sentry-tracing = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared", features = ["metrics"] }
spyglass-rpc = { path = "../spyglass-rpc" }
strum = "0.24"
strum_macros = "0.24"
tauri = { version = "1.2.4", features = ["api-all", "clipboard", "devtools", "macos-private-api", "notification", "system-tray", "updater"] }
tauri-plugin-deep-link = { git = "https://github.com/FabianLars/tauri-plugin-deep-link.git", rev = "644046bc08e1066d00fa9be60b46cc6de8f2a901" }
tokio = "1"
tokio-retry = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
url = "2.2"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
rev = "6c63c49e29e670343b71fee455e1a6c9145f4a8e"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2.7"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
