[package]
name = "ui-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
js-sys = "0.3.61"
url = "2.3.1"
wasm-bindgen-futures = "0.4.33"
yew = { version = "0.20", features = ["csr"] }