[package]
name = "local-file-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "local-file-indexer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.22", features = ["serde", "wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spyglass-plugin = { path = "../../crates/spyglass-plugin" }
url = "2.2.2"